--- a/mmseq_run/config/robot/thing.yaml
+++ b/mmseq_run/config/robot/thing.yaml
@@ -98,7 +98,7 @@ controller:
       base:
         # - "base_collision_link"
         - "base_collision_link_front"
-        - "base_collision_link_back"
+        #- "base_collision_link_back"
 
       rack:
         # - "rack_collision_link"
