Update pick and place task config file to include EEPoseSE2 control.

--- a/mmseq_run/config/controller/HTMPC_EEBase.yaml
+++ b/mmseq_run/config/controller/HTMPC_EEBase.yaml
@@ -4,7 +4,8 @@ controller:
   self_collision_avoidance_enabled: True
   static_obstacles_collision_avoidance_enabled: True
   base_pose_tracking_enabled: True
-
+  ee_pose_tracking_enabled: True
+  
   collision_constraint_type: 
     sdf: "SignedDistanceConstraint" # SignedDistanceConstraint or SignedDistanceConstraintCBF 
   type: "HTMPC"
