restructured HTMPC. Added NavHTMPC.

--- a/mmseq_run/config/controller/MPC.yaml
+++ b/mmseq_run/config/controller/MPC.yaml
@@ -28,6 +28,7 @@ controller:
     BasePoseSE2: [0.01, 0.01, 0.01]
     EEPos3: [0.01, 0.01, 0.01]
     EEPose: [0.01, 0.01, 0.01, 0.01, 0.01, 0.1]
+    EEPoseBaseFrame: [0.01, 0.01, 0.01, 0.01, 0.01, 0.1]
 
   self_collision_emergency_stop: True
 
