Local changes related to plotting.

--- a/mmseq_utils/CMakeLists.txt
+++ b/mmseq_utils/CMakeLists.txt
@@ -19,6 +19,7 @@ catkin_install_python(PROGRAMS
    scripts/plot_benchmark_result_squarewave.py
    scripts/plot_benchmark_result_self_collision.py
    scripts/plot_benchmark_result_semi_static_reactive.py
+   scripts/plot_benchmark_result_ee_hold.py
    scripts/plot_path_comparison.py
    scripts/plot_rosbag.py
    scripts/plot_plan.py
