Massively cleaning up mm_utils to be shorter and cleaner

--- a/mm_run/config/self_collision_avoidance.yaml
+++ b/mm_run/config/self_collision_avoidance.yaml
@@ -25,6 +25,7 @@ controller:
   ee_pose_tracking_enabled: False
   type: "MPC"
   acados:
+    name: "SelfCollisionAvoidance"
     ocp_solver_options:
       qp_solver: "FULL_CONDENSING_HPIPM"
       # FULL_CONDENSING_QPOASES
