--- a/mm_utils/CMakeLists.txt
+++ b/mm_utils/CMakeLists.txt
@@ -8,13 +8,6 @@ catkin_python_setup()
 catkin_package()
 
 catkin_install_python(PROGRAMS
-   scripts/plot_calibration_results.py
-   scripts/plot_logger_ros.py
-   scripts/plot_logger_pybullet.py
-   scripts/plot_path_comparison.py
-   scripts/plot_rosbag.py
-   scripts/plot_plan.py
-   scripts/demo_rosbag_post_processing.py
-   scripts/pub_msg_from_bag.py
+   scripts/plot_logs.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
