--- a/mm_run/config/3d_collision_sdf.yaml
+++ b/mm_run/config/3d_collision_sdf.yaml
@@ -2,17 +2,15 @@ planner:
   sot_type: "SoTStatic"
   tasks:
   - frame_id: base
-    name: Base Position
-    planner_type: ROSTrajectoryPlanner
-    cruise_speed: 0.35
-    yaw_speed: 0.35
-    yaw_accel: 100
+    name: Base_Pos
+    planner_type: WaypointPlanner
+    target_pose: [0.0, 0.0, 0.0]   # [x, y, yaw]
+    hold_period: 2.0
     tracking_err_tol: 0.4
-    ref_traj_duration: 1.5
-  - frame_id: base_link
+  - frame_id: EE
     name: EE_Pose_Baseframe
-    planner_type: EEPoseSE3Waypoint
-    target_pose: [1.35, 0.17, 0.7, 1.57, 0, 1.57]
+    planner_type: WaypointPlanner
+    target_pose: [1.35, 0.17, 0.7, 1.57, 0, 1.57]  # [x, y, z, roll, pitch, yaw]
     hold_period: 4
     tracking_err_tol: 0.1
 simulation:
