--- a/mm_run/config/simple_experiment.yaml
+++ b/mm_run/config/simple_experiment.yaml
@@ -6,22 +6,18 @@
 # - MPC controller with Acados
 
 planner:
-  sot_type: "SoTStatic"
   tasks:
-  # Task 1: Move mobile base along a trajectory
+  # Task 1: Move mobile base to target pose (SE2: x, y, yaw)
   - frame_id: base
-    name: Base Position
-    planner_type: BasePoseTrajectoryLine
-    initial_pose: [0, 0, 0]      # x, y, yaw
-    target_pose: [2.5, 0.4, 0]   # x, y, yaw
-    cruise_speed: 1.0
-    yaw_speed: 0.5               # rad/s
+    name: Base Waypoint
+    planner_type: WaypointPlanner
+    target_pose: [3.5, 0.4, 3.14]   # x, y, yaw
     tracking_err_tol: 0.2
 
-  # Task 2: Move end-effector to target pose
+  # Task 2: Move end-effector to target pose (SE3: x, y, z, roll, pitch, yaw)
   - frame_id: EE
-    name: EE Pose
-    planner_type: EEPoseSE3Waypoint
+    name: EE Waypoint
+    planner_type: WaypointPlanner
     target_pose: [1.5, 0.4, 1.0, 3.14, 0, 0]  # x, y, z, roll, pitch, yaw - EE pointing down
     hold_period: 1.0
     tracking_err_tol: 0.05
@@ -35,6 +31,9 @@ controller:
   # Acados solver configuration
   acados:
     name: "SimpleExperiment"
+
+simulation:
+  duration: 10
 
 include:
   - package: "mm_run"
