--- a/mm_run/config/3d_collision.yaml
+++ b/mm_run/config/3d_collision.yaml
@@ -3,9 +3,8 @@ planner:
   tasks:
   - name: "EE Pos 1"
     planner_type: "WaypointPlanner"
-    frame_id: "EE"
-    target_pose: [0.0, 1.0, 0.0, 0.0, 0.0, 0.0]  # [x, y, z, roll, pitch, yaw]
-    hold_period: 3.
+    ee_pose: [0.0, 1.0, 0.0, 0.0, 0.0, 0.0]  # [x, y, z, roll, pitch, yaw]
+    hold_period: 3.0
     tracking_err_tol: 0.02
 
 simulation:
