--- a/mm_run/config/controller/MPC.yaml
+++ b/mm_run/config/controller/MPC.yaml
@@ -13,7 +13,6 @@ controller:
   soft_cst: True
   penalize_du: False
   self_collision_avoidance_enabled: True
-  sdf_collision_avoidance_enabled: False
   static_obstacles_collision_avoidance_enabled: False
   ee_upward_constraint_enabled: False
   cst_tol_schedule_enabled: False
@@ -24,18 +23,15 @@ controller:
   ee_upward_deviation_angle_max: 0.20    #rad, 0.26 rad ~ 15 degree
 
   collision_constraint_type:
-    self: "SignedDistanceConstraint" # SignedDistanceConstraint or SignedDistanceConstraintCBF
-    sdf: "SignedDistanceConstraintCBF"
+    self: "SignedDistanceConstraint"
     static_obstacles: "SignedDistanceConstraint"
 
   collision_constraints_softened:
     self: False
-    sdf: False
     static_obstacles: False
 
   collision_safety_margin:
     self: 0.25
-    sdf: 0.25
     static_obstacles: 0.15
 
   # soft constraints parameters
@@ -46,17 +42,9 @@ controller:
     self:
       mu: 0.0001
       zeta: 0.005
-    sdf:
-      mu: 0.0001
-      zeta: 0.005
     static_obstacles:
       mu: 0.0001
       zeta: 0.005
-
-  collision_cbf_gamma:
-    sdf: 0.3
-    self: 0.9
-    static_obstacles: 0.9
 
   ee_upward_soft:
     mu: 0.001
