Deleting old outdated cost functions and updating the masks

--- a/mm_run/config/test_experiments/test_position_only.yaml
+++ b/mm_run/config/test_experiments/test_position_only.yaml
@@ -5,11 +5,11 @@
 
 planner:
   tasks:
-  - name: EE Position Only
+  - name: Position Only
     planner_type: WaypointPlanner
     base_pose: [2, 0.4, 0.5]   # x, y, yaw in world frame
     base_mask: [true, true, false]  # Only position (x, y) matters, yaw doesn't
-    ee_pose: [2.5, 0.4, 1.0, 0.5, 0, 0]  # World frame: [x, y, z, roll, pitch, yaw]
+    ee_pose: [3.0, 0.8, 1.0, 0.5, 0, 0]  # World frame: [x, y, z, roll, pitch, yaw]
     ee_mask: [true, true, true, false, false, false]  # Only position matters, orientation doesn't
     tracking_pos_err_tol: 0.05
 
@@ -18,16 +18,9 @@ controller:
   static_obstacles_collision_avoidance_enabled: False
   acados:
     name: "TestPositionOnly"
-  cost_params:
-    EEPose:
-      Qk: [3, 3, 3, 0, 0, 0]  # [x, y, z, roll, pitch, yaw]
-      P: [1, 1, 1, 0, 0, 0]   # Terminal weights
-    BasePose:
-      Qk: [3, 3, 0]  # [x, y, yaw] - set yaw weight to 0 to disable yaw tracking
-      P: [1, 1, 0]   # Terminal weights
 
 simulation:
-  duration: 4
+  duration: 8
 
 include:
   - package: "mm_run"
