--- a/mm_assets/package.xml
+++ b/mm_assets/package.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>mm_assets</name>
   <version>0.0.0</version>
-  <description>Mobile manipulation robot and scene assets (URDF, meshes)</description>
+  <description>TODO: Package description</description>
+  <maintainer email="benjamin.bogenberger@tum.de">benni</maintainer>
+  <license>TODO: License declaration</license>
 
-  <maintainer email="todo@todo.todo">Maintainer</maintainer>
-  <license>MIT</license>
-
-  <buildtool_depend>catkin</buildtool_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
+    <build_type>ament_python</build_type>
   </export>
 </package>
