--- a/mm_control/package.xml
+++ b/mm_control/package.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>mm_control</name>
   <version>0.0.0</version>
-  <description>Mobile manipulation MPC control package</description>
+  <description>TODO: Package description</description>
+  <maintainer email="benjamin.bogenberger@tum.de">benni</maintainer>
+  <license>TODO: License declaration</license>
 
-  <maintainer email="todo@todo.todo">Maintainer</maintainer>
-  <license>MIT</license>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
-  <depend>rospy</depend>
   <depend>mm_utils</depend>
   <depend>mm_plan</depend>
-  <buildtool_depend>catkin</buildtool_depend>
 
   <export>
+    <build_type>ament_python</build_type>
   </export>
 </package>
